@@ -10,6 +10,7 @@ Version 1.4.10 - CVS
     filenames.
   - Fix rare bug in forwarding as attachment from some search results.
   - Add warning about magic_quotes_* in configtest.
+  - Unify accepted versions for imap_server_type and set_defaults (#1629722).
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
